# IPCVFinalProject

./: CMakeLists.txt  README.md  README.txt  README.txt.txt  knn_functions.cpp  knn_functions.h  knn_show.cpp  knnconcept.cpp
App File/: CMakeLists.txt  classify_final_with_knn.cpp  knn_livedemo.cpp  knn_show.cpp
Cropping/: plate_cropping.py
classifiers/: Knn.cpp
evaluators/: ConfusionMatrix.cpp
funcs_and_label-reading/: CMakeLists.txt  README.txt  knn_functions.cpp  knn_functions.h  label_plates.cpp
minkowski_distance/: CMakeLists.txt  MinkowskiDistance.cpp  MinkowskiDistance.h
statistics/classifiers/: CMakeLists.txt  Knn.cpp
statistics/minkowski_distance/: MinkowskiDistance.h
